# tarok

./: .coverage-baseline  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  export_codebase.py  fix_graphs.py  fix_trainer.py  overfit_test.py  patch_main.py  patch_server.py  patch_trainer.py  process_cards.py  test_trace_replay.py  update_dashboard.py
backend/: pyproject.toml
backend/.hypothesis/constants/: 083706e4977997e0  1235848bd3765bae  1508d2dd42b82108  1caf7b651143914f  2f590e58173a5038  3bc9e285dbc75217  405b10087f81198c  4424fbae156f15d5  47c11d6b631862ff  4d55d2d41d9ccfed  4fc59018143143c7  5e8364ae4e133f8e  6ae8778fa5664bfb  700a9ccc4a45419a  738827340f594741  772cd8f1d8e18151  7e7556b2e59e8212  8316d5826acd74e1  85a16ca153fe71cb  8c124a261512f945  8d2b68b904655728  990ca099987a7f76  a680871884b69d91  abc05029e82bd419  acdabfd8df984e47  acdb2e3512e19131  b413a23b203f9438  c8f2b699ceef9e27  ce31a6a485ff721f  d883bf0df2d3372f  da39a3ee5e6b4b0d  e39e5658418b35fe  e3bcfd7b6139d354  e55290bb6042bd9f  ebc61551cc6dcbe3  f37ccb4033155330  f48d9a393e02c3f0
backend/backend/: coverage.json
backend/data/: arena_results.json  tournament_results.json
backend/data/human_play/: game-0_r001_1776251624342.json
backend/scripts/: bench_endgame_tree_size.py  bench_pimc_berac.py  bench_rust_selfplay.py  benchmark_stockskis.py  benchmark_v3_2.py
backend/src/: tarok_engine.pyi
backend/src/tarok/: __init__.py  __main__.py
backend/tests/: conftest.py  test_arena_leaderboard.py  test_arena_nn.py  test_arena_router_variant.py  test_arena_use_case.py  test_berac.py  test_bidding_bdd.py  test_breeding.py  test_card_counting.py  test_dealing_bdd.py  test_deck_bdd.py  test_duplicate_arena_router.py  test_game.py  test_hof_and_opponents.py  test_lookahead.py  test_model_selection.py  test_multi_round.py  test_play_vs_ai.py  test_properties.py  test_rules_engine.py  test_rust_engine.py  test_scoring_bdd.py  test_stockskis.py  test_stockskis_v4.py  test_tournament.py  test_tournament_results.py  test_training_dashboard.py  test_training_distillation.py  test_tricks_bdd.py  test_v3_mode_routing.py  test_v4_mode_routing.py  test_ws_bidding_options.py  test_ws_observer.py
backend/tests/features/: bidding.feature  dealing.feature  deck.feature  scoring.feature  tricks.feature
engine-rs/: Cargo.toml  pyproject.toml
engine-rs/.cargo/: config.toml
engine-rs/src/: alpha_mu.rs  arena.rs  benchmark.rs  card.rs  double_dummy.rs  encoding.rs  encoding_3p.rs  expert_games.rs  expert_games_v2v3.rs  expert_games_v2v3v5.rs  expert_games_v5.rs  game_state.rs  lapajne.rs  legal_moves.rs  lib.rs  lustrek.rs  pimc.rs  player.rs  player_bot.rs  player_centaur.rs  player_nn.rs  py_bindings.rs  scoring.rs  self_play.rs  stockskis.rs  stockskis_m6.rs  stockskis_pozrl.rs  stockskis_v1.rs  stockskis_v2.rs  stockskis_v3.rs  stockskis_v4.rs  stockskis_v5.rs  stockskis_v6.rs  trick_eval.rs  warmup.rs
engine-rs/src/bots/: centaur_bidding.rs  lapajne.rs  lustrek.rs  m8.rs  m9.rs  mod.rs  stockskis_m6.rs  stockskis_m6_3p.rs  stockskis_pozrl.rs  stockskis_v3.rs  stockskis_v3_3p.rs  stockskis_v5.rs  stockskis_v6.rs
engine-rs/tests/: endgame_pimc_vs_alpha_mu.rs  endgame_seeded_determinism.rs  seeded_deal_determinism.rs  three_player_foundation.rs
model/: pyproject.toml
training-lab/: REVIEW.md  conftest.py  pyproject.toml  test_real_ui.py  test_ui.py  test_ui2.py  train.py  train_and_evaluate.py
training-lab/configs/: 2nn-vs-2-m6.yaml  duplicate-actor-only.yaml  duplicate-centaur.yaml  duplicate.yaml  ec2-g5-1h.yaml  handoff.yaml  league.yaml  learn-from-m6.yaml  self-play-small.yaml  self-play.yaml  three-player-duplicate-centaur-smoke.yaml  three-player-duplicate-smoke.yaml  three-player-duplicate.yaml  v3-vs-3-m6.yaml  v4-vs-3-m6.yaml  vs-1-bot.yaml  vs-2-bots.yaml  vs-3-bots.yaml  vs-3-v3.yaml  vs-3-v6.yaml  warm-up.yaml
training-lab/tests/: test_actor_only_ppo_batch_prep.py  test_bid_credit_assignment_regression.py  test_calibration_use_cases.py  test_centaur_advantage.py  test_collect_duplicate_experiences.py  test_configurable_iteration_runner.py  test_container_duplicate_wiring.py  test_duplicate_centaur_wiring.py  test_duplicate_config.py  test_duplicate_disabled_is_noop.py  test_duplicate_pairing.py  test_duplicate_pipeline_smoke.py  test_duplicate_reward.py  test_elo_policies.py  test_expert_replay.py  test_iteration_use_cases.py  test_league.py  test_league_calibration_port.py  test_learner_contract_stats.py  test_learning_overfit_regression.py  test_maintain_league_pool.py  test_model_cache.py  test_names.py  test_numpy_arena_stats.py  test_numpy_iteration_stats.py  test_ppo_batch_preparation.py  test_ppo_human_experiences.py  test_resolve_config.py  test_run_duplicate_arena.py  test_run_iteration.py  test_rust_self_play_adapter.py  test_seeded_self_play_adapter.py  test_shadow_sources.py  test_taroknet_v5.py  test_torch_model_adapter.py  test_train_model.py  test_training_loop_use_cases.py
training-lab/training/: container.py  entities.py  ports.py  use_cases.py
(+400 files in other folders)
