[project]
name = "tarok"
version = "0.1.0"
description = "Slovenian Tarok game engine with self-play RL agents"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "tarok-model",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13",
    "pydantic>=2.9",
    "torch>=2.4",
    "numpy>=2.0",
    "tensorboard>=2.18",
    "deap>=1.4",
    "shortuuid>=1.0.13",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-bdd>=8",
    "pytest-cov>=6.0",
    "hypothesis>=6.100",
    "ruff>=0.7",
    "import-linter>=2.3",
    "ty",
    "maturin>=1.7",
    "gymnasium>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.hatch.build.targets.wheel]
packages = ["src/tarok"]

[tool.ruff]
line-length = 100

[tool.ty.environment]
extra-paths = ["../training-lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.importlinter]
root_package = "tarok"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Use cases stay pure: no infrastructure, I/O, or serialization imports"
type = "forbidden"
source_modules = [
    "tarok.use_cases",
]
forbidden_modules = [
    "sqlalchemy",
    "django",
    "flask",
    "fastapi",
    "starlette",
    "werkzeug",
    "requests",
    "httpx",
    "urllib",
    "boto3",
    "google",
    "azure",
    "celery",
    "redis",
    "pymongo",
    "psycopg2",
    "peewee",
    "pika",
    "kafka",
    "pydantic",
    "marshmallow",
    "pandas",
    "numpy",
    "csv",
    "json",
    "xml",
    "yaml",
    "os",
    "sys",
    "socket",
    "pickle",
]

[[tool.importlinter.contracts]]
name = "Use cases depend on ports/entities, not adapters"
type = "forbidden"
source_modules = [
    "tarok.use_cases",
]
forbidden_modules = [
    "tarok.adapters",
]

[[tool.importlinter.contracts]]
name = "Entities stay framework-free and side-effect-free"
type = "forbidden"
source_modules = [
    "tarok.entities",
]
forbidden_modules = [
    "sqlalchemy",
    "django",
    "flask",
    "fastapi",
    "starlette",
    "requests",
    "httpx",
    "urllib",
    "boto3",
    "google",
    "azure",
    "celery",
    "redis",
    "pymongo",
    "psycopg2",
    "peewee",
    "pika",
    "kafka",
    "pydantic",
    "marshmallow",
    "pandas",
    "numpy",
    "csv",
    "json",
    "xml",
    "yaml",
    "os",
    "sys",
    "socket",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]

[tool.uv.sources]
tarok-model = { path = "../model", editable = true }
