[project]
name = "tarok-model"
version = "0.1.0"
description = "Shared Tarok neural network and state encoding package"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4",
    "numpy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tarok_model"]