[project]
name = "training-lab"
version = "0.1.0"
description = "RL training lab for Tarok neural network agents"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4",
    "numpy>=2.0",
    "shortuuid>=1.0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/training_lab"]

[tool.ruff]
line-length = 100
